# spriteib

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README  docker-compose.yml  settings.toml
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs
web/: Cargo.toml
web/src/: main.rs
web/templates/thread/: view.tera.html
worker/: Cargo.toml
worker/src/: main.rs
