[package]
name = "spriteib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"]}
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
serde_json = "1.0.68"
serde = { version = "1.0.140", features = ["derive"] }
mime = "0.3.16"
open = "5.0.1"
futures-util = "0.3.21"
tokio-stream = "0.1.8"
poem = {version="3.0.4", features= ["sse", "i18n", "csrf", "multipart", "static-files", "session"]}
couch_rs = "0.10"
chrono = {version="0.4.38", features=["serde"]}
