[package]
name = "spriteib_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"]}
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
serde_json = "1.0.68"
serde = { version = "1.0.140", features = ["derive"] }
mime = "0.3.16"
open = "5.0.1"
futures-util = "0.3.21"
tokio-stream = "0.1.8"
couch_rs = "0.10"
chrono = {version="0.4.38", features=["serde"]}
redis = {version="0.26.1", features=["aio", "tokio-comp", "streams"]}
uuid = { version = "1.10.0", features = ["v4", "serde"] }
config = "0.14.0"
log = "0.4.22"
env_logger = "0.11.5"
